# adv_associates_web

./: .gitignore  README.md  index.py  pyproject.toml  sistema.db
components/: modal_advogados.py  modal_novo_advogado.py  modal_novo_processo.py  sidebar.py
