[tool.poetry]
name = "adv-associates-web"
version = "0.1.0"
description = ""
authors = ["dolivmorais <dolivmorais@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash-bootstrap-components = "^1.6.0"
pandas = "^2.2.2"
dash = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
